--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -35,4 +35,7 @@
 @import 'pages/contact';*/
 /*themes
 @import 'themes/theme';
-@import 'themes/admin';*///
+@import 'themes/admin';*/
+
+//vendor
+@import 'vendor/bootstrap';
