--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,8 +6,8 @@
 //@import 'abstracts/placeholders';
 
 /*vendors
-@import 'vendors/bootstrap';
 @import 'vendors/jquery-ui';*/
+@import 'vendor/bootstrap';
 
 //base
 @import 'base/reset';
@@ -18,17 +18,19 @@
 //layout
 //@import 'layout/grid';
 @import 'layout/header';
-@import 'layout/main-section';
-//@import 'layout/footer';
+@import 'layout/main';
+@import 'layout/nav';
+@import 'layout/section';
+@import 'layout/footer';
 //@import 'layout/sidebar';
-@import 'layout/forms';
+//@import 'layout/forms';
 
 //components
 @import 'components/buttons';
 //@import 'components/carousel';
 //@import 'components/cover';
 //@import 'components/dropdown';
-@import 'components/inputs';
+@import 'components/pagenavigation';
 
 /*pages
 @import 'pages/home';
@@ -37,5 +39,3 @@
 @import 'themes/theme';
 @import 'themes/admin';*/
 
-//vendor
-@import 'vendor/bootstrap';
