mas cambios en scss

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -13,7 +13,8 @@ $raisin-black: #222323;
 $nickel: #6C6E70;
 
 //Font Family
-$raleway: 'raleway', sans-serif;
+$playfair: 'Playfair Display', serif;
+$roboto: 'Roboto', sans-serif;
 
 // Tipography
 // Font Weight
@@ -22,10 +23,11 @@ $regular: 400;
 $bold: 700;
 
 // Font Sizes
-$xxx-large: 100px;
-$x-large: 70px;
-$large: 50px;
-$medium: 18px;
+$xx-large: 70px;
+$x-large: 30px;
+$large: 18px;
+$medium: 16px;
+$small: 12px;
 
 
 
