--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,6 +17,7 @@
 
 //layout
 //@import 'layout/grid';
+@import 'layout/article';
 @import 'layout/header';
 @import 'layout/main';
 @import 'layout/nav';
@@ -30,7 +31,7 @@
 //@import 'components/carousel';
 //@import 'components/cover';
 //@import 'components/dropdown';
-@import 'components/pagenavigation';
+@import 'components/pagenav';
 
 /*pages
 @import 'pages/home';
