--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,39 @@
 /*vendors
 @import 'vendors/jquery-ui';*/
+/* Base Typography*/
+h2, h3, h4, h5, h6 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+h1 {
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  font-size: 70px;
+  color: #E6E7E7;
+  text-align: center;
+  padding: 100px 100px;
+  font-style: italic;
+  align-items: center;
+}
+
+.article {
+  padding: 100px;
+  background-color: #FFFFFF;
+  padding: 50px 0;
+  text-align: center;
+  border: #E56353;
+}
+
 .header {
-  padding-top: 100px;
-  background-image: url("..assets/images/post-image.jpg");
+  padding-top: 2rem;
+  background-image: url("../images/post-image.jpg");
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 
 .main {
@@ -13,9 +44,22 @@
   align-items: left;
   padding: 30px 100px 30px 100px;
 }
+.main__btn {
+  padding-top: 2rem;
+}
+.main__text {
+  color: #6C6E70;
+  font-family: arial;
+  text-align: justify;
+  line-height: 3rem;
+  letter-spacing: 2px;
+}
 
 nav {
   background-color: #121619;
+}
+nav__active {
+  color: #E56353;
 }
 
 section {
@@ -34,6 +78,32 @@ section {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.btn {
+  border-radius: 50px;
+  font-size: 16px;
+  color: #FFFFFF;
+  background-color: #6C6E70;
+}
+.btn:hover {
+  background-color: #D1D1D1;
+  border-color: #FFFFFF;
+  color: #FFFFFF;
+}
+
+.pagenav {
+  font-family: "Roboto", sans-serif;
+  background-color: #D1D1D1;
+}
+
+.page-link {
+  color: #121619;
+}
+.page-link:hover {
+  background-color: #6C6E70;
+  border-color: #FFFFFF;
+  color: #FFFFFF;
 }
 
 /*pages
