--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,4 +1,10 @@
 .header {
-    padding-top: 100px;
-    background-image: url("..assets/images/post-image.jpg");
+    padding-top: 2rem;
+    background-image: url("../images/post-image.jpg");
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+
 }
